    * vsftpd 2.2.2: add SSL support
    * wget 1.12
    * xyssl 0.9

- Remove packages, libs, modules, tools:

- Firmware updates:
    * Please see FIRMWARES for the list of currently supported boxes and firmwares.

- BusyBox:
    * updated to 1.15.3
    * tools: updated to 1.15.3

- Web interface:
    * add additional information and possibility to mount/umount partitions (by herman72pb)

- Other stuff:
    * add reiserfs to automountable filesystems
    * add IPv6
    * fix strip library function for 3170
    * tune behaviour of freetz_download (retries: 3, timeout: 20s)
    * Integrate new AVM open source packages (04.70 and 7270_04.70)
    * rudishell: 
      + show it only with security level 0
      + don't allow to execute any code by clicking on a wrong url 


=== Freetz-1.1-stable ===

- Build system:
  * toolchains:
    - add menuconfig option to adjust HOSTCC variable 
    - add ccache for download- and kernel-toolchain

- New tools and hooks:
  * external
  * new make targets:
    - check-downloads: checks all downloads for availability (also 
      $(pkg)-check-downloads)
    - mirror: downloads all package downloads into dl/mirror (also
      $(pkg)-download-mirror). This makes hardlinks for dupes in dl/ and
      dl/mirror to save disk space.

- New patches (read online help for more info):

- New packages, libs, modules:
    * bfusb 3-18-39 (firmware for bluetooth stick)
    * br2684ctl 20040226
    * dtach 0.8
    * external 0.1
    * hd-idle 0.1
    * httptunnel 3.3
    * libtool 1.5.26
    * linux-atm 2.4.1
    * mcabber 0.9.7
    * microperl 5.8.8
    * nagios 2.11
    * nano 2.0.9
    * nfs-utils 1.1.3
    * nfsd-cgi 0.1
    * openssh 5.1p1
    * pciutils 3.0.0
    * portmap 6.0
    * sablevm-sdk 
    * sane-backends 1.0.20
    * socat 1.6.0.1
    * squid 3.0.STABLE9
    * tcp_wrappers 7.6
    * tinc 1.0.8
    * tree 1.5.1.2
    * usbutils 0.73
    * wol 0.7.1
    * wput 0.6.1
    * xpdf 3.02
    * new kernel modules: bfusb, pppoe, pppox
