@@ -184,6 +184,7 @@ Latest changes:
 
 - Web interface:
     * add additional information and possibility to mount/umount partitions (by herman72pb)
+    * added favicon by atomphil (Freetz-Webinterface only)
 
 - Other stuff:
     * add reiserfs to automountable filesystems
